# coordinates-instant-cloning

./: CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
framework/include/framework/: disable_all_warnings.h  glm_ostream.h  image.h
framework/src/: .clang-format  image.cpp
include/: adaptive_mesh.hpp  geometry.hpp  helpers.hpp  mask_painter.hpp  mvc_solver.hpp
src/: adaptive_mesh.cpp  main.cpp  mask_painter.cpp  mvc_solver.cpp
